# mbi-crawler

./: .dockerignore  .env.example  .envrc  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE  README.md  cliff.toml  pyproject.toml  pyrightconfig.json
.claude/: settings.local.json
.github/workflows/: ci.yaml  release.yaml
config/: settings.yaml
config/sites/: cern_cms.yaml  mbi_oeaw.yaml  wiki_mbi.yaml
scripts/: release.sh
src/mbi_crawler/: __init__.py  __main__.py  cli.py
src/mbi_crawler/config/: __init__.py  loader.py  models.py
src/mbi_crawler/crawlers/: __init__.py  base.py  oeaw.py  twiki.py  wikijs.py
src/mbi_crawler/utils/: __init__.py
tests/: test_output_writer.py
